@@ -365,6 +365,9 @@
 	"customcssprotected": "You do not have permission to edit this CSS page because it contains another user's personal settings.",
 	"customjsonprotected": "You do not have permission to edit this JSON page because it contains another user's personal settings.",
 	"customjsprotected": "You do not have permission to edit this JavaScript page because it contains another user's personal settings.",
+	"sitecssprotected": "You do not have permission to edit this CSS page because it may affect all visitors",
+	"sitejsonprotected": "You do not have permission to edit this JSON page because it may affect all visitors",
+	"sitejsprotected": "You do not have permission to edit this JavaScript page because it may affect all visitors",
 	"mycustomcssprotected": "You do not have permission to edit this CSS page.",
 	"mycustomjsonprotected": "You do not have permission to edit this JSON page.",
 	"mycustomjsprotected": "You do not have permission to edit this JavaScript page.",
@@ -1178,6 +1181,7 @@
 	"group-autoconfirmed": "Autoconfirmed users",
 	"group-bot": "Bots",
 	"group-sysop": "Administrators",
+	"group-interface-admin": "Interface administrators",
 	"group-bureaucrat": "Bureaucrats",
 	"group-suppress": "Suppressors",
 	"group-all": "(all)",
@@ -1185,12 +1189,14 @@
 	"group-autoconfirmed-member": "{{GENDER:$1|autoconfirmed user}}",
 	"group-bot-member": "{{GENDER:$1|bot}}",
 	"group-sysop-member": "{{GENDER:$1|administrator}}",
+	"group-interface-admin-member": "{{GENDER:$1|interface administrator}}",
 	"group-bureaucrat-member": "{{GENDER:$1|bureaucrat}}",
 	"group-suppress-member": "{{GENDER:$1|suppressor}}",
 	"grouppage-user": "{{ns:project}}:Users",
 	"grouppage-autoconfirmed": "{{ns:project}}:Autoconfirmed users",
 	"grouppage-bot": "{{ns:project}}:Bots",
 	"grouppage-sysop": "{{ns:project}}:Administrators",
+	"grouppage-interface-admin": "{{ns:project}}:Interface administrators",
 	"grouppage-bureaucrat": "{{ns:project}}:Bureaucrats",
 	"grouppage-suppress": "{{ns:project}}:Suppress",
 	"right-read": "Read pages",
@@ -1241,6 +1247,9 @@
 	"right-editusercss": "Edit other users' CSS files",
 	"right-edituserjson": "Edit other users' JSON files",
 	"right-edituserjs": "Edit other users' JavaScript files",
+	"right-editsitecss": "Edit sitewide CSS",
+	"right-editsitejson": "Edit sitewide JSON",
+	"right-editsitejs": "Edit sitewide JavaScript",
 	"right-editmyusercss": "Edit your own user CSS files",
 	"right-editmyuserjson": "Edit your own user JSON files",
 	"right-editmyuserjs": "Edit your own user JavaScript files",
@@ -1282,10 +1291,11 @@
 	"grant-createaccount": "Create accounts",
 	"grant-createeditmovepage": "Create, edit, and move pages",
 	"grant-delete": "Delete pages, revisions, and log entries",
-	"grant-editinterface": "Edit the MediaWiki namespace and user CSS/JSON/JavaScript",
+	"grant-editinterface": "Edit the MediaWiki namespace and sitewide/user JSON",
 	"grant-editmycssjs": "Edit your user CSS/JSON/JavaScript",
 	"grant-editmyoptions": "Edit your user preferences",
 	"grant-editmywatchlist": "Edit your watchlist",
+	"grant-editsiteconfig": "Edit sitewide and user CSS/JS",
 	"grant-editpage": "Edit existing pages",
 	"grant-editprotected": "Edit protected pages",
 	"grant-highvolume": "High-volume editing",
