@@ -565,6 +565,9 @@
 	"customcssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"customjsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"customjsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitecssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitejsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
+	"sitejsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomcssprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomjsonprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
 	"mycustomjsprotected": "Used as error message. Parameters:\n* $1 - (Unused) the action the user attempted to perform",
@@ -1378,6 +1381,7 @@
 	"group-autoconfirmed": "{{doc-group|autoconfirmed}}\nOn Wikimedia sites autoconfirmed users are users which are older than 4 days. After those 4 days, they have more rights.",
 	"group-bot": "{{doc-group|bot}}\n{{Identical|Bot}}",
 	"group-sysop": "{{doc-group|sysop}}\n{{Identical|Administrator}}",
+	"group-interface-admin": "{{doc-group|interface-admin}}",
 	"group-bureaucrat": "{{doc-group|bureaucrat}}",
 	"group-suppress": "{{doc-group|suppress}}\nThis is an optional (disabled by default) user group, meant for the suppression feature in [[mw:Flow|Flow]]. It is not to be confused with the Oversighters group, which also has access to the [[mw:RevisionDelete|RevisionDelete]] feature, to change the visibility of revisions through [[Special:RevisionDelete]].\n\n{{Identical|Suppress}}",
 	"group-all": "The name of the user group that contains all users, including anonymous users\n\n{{Identical|All}}",
@@ -1385,12 +1389,14 @@
 	"group-autoconfirmed-member": "{{doc-group|autoconfirmed|member}}",
 	"group-bot-member": "{{doc-group|bot|member}}",
 	"group-sysop-member": "{{doc-group|sysop|member}}\n{{Identical|Administrator}}",
+	"group-interface-admin-member": "{{doc-group|interface-admin|member}}",
 	"group-bureaucrat-member": "{{doc-group|bureaucrat|member}}",
 	"group-suppress-member": "{{doc-group|suppress|member}}\nThis is a member of the optional (disabled by default) user group, meant for the [[mw:RevisionDelete|RevisionDelete]] feature, to change the visibility of revisions through [[Special:RevisionDelete]].\n\n{{Identical|Suppress}}",
 	"grouppage-user": "{{doc-group|user|page}}\n{{Identical|User}}",
 	"grouppage-autoconfirmed": "{{doc-group|autoconfirmed|page}}",
 	"grouppage-bot": "{{doc-group|bot|page}}\n{{Identical|Bot}}",
 	"grouppage-sysop": "{{doc-group|sysop|page}}",
+	"grouppage-interface-admin": "{{doc-group|interface-admin|page}}",
 	"grouppage-bureaucrat": "{{doc-group|bureaucrat|page}}",
 	"grouppage-suppress": "{{doc-group|suppress|page}}\n{{Identical|Suppress}}",
 	"right-read": "{{doc-right|read}}\nBasic right to read any page.",
@@ -1441,6 +1447,9 @@
 	"right-editusercss": "{{doc-right|editusercss}}\nSee also:\n* {{msg-mw|Right-editmyusercss}}",
 	"right-edituserjson": "{{doc-right|edituserjson}}\nSee also:\n* {{msg-mw|Right-editmyuserjson}}",
 	"right-edituserjs": "{{doc-right|edituserjs}}\nSee also:\n* {{msg-mw|Right-editmyuserjs}}",
+	"right-editsitecss": "{{doc-right|editsitecss}}",
+	"right-editsitejson": "{{doc-right|editsitejson}}",
+	"right-editsitejs": "{{doc-right|editsitejs}}",
 	"right-editmyusercss": "{{doc-right|editmyusercss}}\nSee also:\n* {{msg-mw|Right-editusercss}}",
 	"right-editmyuserjson": "{{doc-right|editmyuserjson}}\nSee also:\n* {{msg-mw|Right-edituserjson}}",
 	"right-editmyuserjs": "{{doc-right|editmyuserjs}}\nSee also:\n* {{msg-mw|Right-edituserjs}}",
@@ -1468,7 +1477,7 @@
 	"right-applychangetags": "{{doc-right|applychangetags}}",
 	"right-changetags": "{{doc-right|changetags}}",
 	"right-deletechangetags": "{{doc-right|deletechangetags}}",
-	"grant-generic": "Used if the grant name is not defined. Parameters:\n* $1 - grant name\n\nDefined grants (grant name refers: blockusers, createeditmovepage, ...):\n* {{msg-mw|grant-checkuser}}\n* {{msg-mw|grant-blockusers}}\n* {{msg-mw|grant-createaccount}}\n* {{msg-mw|grant-createeditmovepage}}\n* {{msg-mw|grant-delete}}\n* {{msg-mw|grant-editinterface}}\n* {{msg-mw|grant-editmycssjs}}\n* {{msg-mw|grant-editmyoptions}}\n* {{msg-mw|grant-editmywatchlist}}\n* {{msg-mw|grant-editpage}}\n* {{msg-mw|grant-editprotected}}\n* {{msg-mw|grant-highvolume}}\n* {{msg-mw|grant-oversight}}\n* {{msg-mw|grant-patrol}}\n* {{msg-mw|grant-privateinfo}}\n* {{msg-mw|grant-protect}}\n* {{msg-mw|grant-rollback}}\n* {{msg-mw|grant-sendemail}}\n* {{msg-mw|grant-uploadeditmovefile}}\n* {{msg-mw|grant-uploadfile}}\n* {{msg-mw|grant-basic}}\n* {{msg-mw|grant-viewdeleted}}\n* {{msg-mw|grant-viewmywatchlist}}",
+	"grant-generic": "Used if the grant name is not defined. Parameters:\n* $1 - grant name\n\nDefined grants (grant name refers: blockusers, createeditmovepage, ...):\n* {{msg-mw|grant-checkuser}}\n* {{msg-mw|grant-blockusers}}\n* {{msg-mw|grant-createaccount}}\n* {{msg-mw|grant-createeditmovepage}}\n* {{msg-mw|grant-delete}}\n* {{msg-mw|grant-editinterface}}\n* {{msg-mw|grant-editmycssjs}}\n* {{msg-mw|grant-editmyoptions}}\n* {{msg-mw|grant-editmywatchlist}}\n* {{msg-mw|grant-editsiteconfig}}\n* {{msg-mw|grant-editpage}}\n* {{msg-mw|grant-editprotected}}\n* {{msg-mw|grant-highvolume}}\n* {{msg-mw|grant-oversight}}\n* {{msg-mw|grant-patrol}}\n* {{msg-mw|grant-privateinfo}}\n* {{msg-mw|grant-protect}}\n* {{msg-mw|grant-rollback}}\n* {{msg-mw|grant-sendemail}}\n* {{msg-mw|grant-uploadeditmovefile}}\n* {{msg-mw|grant-uploadfile}}\n* {{msg-mw|grant-basic}}\n* {{msg-mw|grant-viewdeleted}}\n* {{msg-mw|grant-viewmywatchlist}}",
 	"grant-group-page-interaction": "{{Related|Grant-group}}",
 	"grant-group-file-interaction": "{{Related|Grant-group}}",
 	"grant-group-watchlist-interaction": "{{Related|Grant-group}}",
@@ -1482,10 +1491,11 @@
 	"grant-createaccount": "Name for grant \"createaccount\".\n{{Related|Grant}}\n{{Identical|Create account}}",
 	"grant-createeditmovepage": "Name for grant \"createeditmovepage\".\n{{Related|Grant}}",
 	"grant-delete": "Name for grant \"delete\".\n{{Related|Grant}}",
-	"grant-editinterface": "Name for grant \"editinterface\".\n\n\"JS\" stands for \"JavaScript\".\n{{Related|Grant}}",
+	"grant-editinterface": "Name for grant \"editinterface\".\n{{Related|Grant}}",
 	"grant-editmycssjs": "Name for grant \"editmycssjs\".\n\n\"JS\" stands for \"JavaScript\".\n{{Related|Grant}}",
 	"grant-editmyoptions": "Name for grant \"editmyoptions\".\n{{Related|Grant}}",
 	"grant-editmywatchlist": "Name for grant \"editmywatchlist\".\n{{Related|Grant}}\n{{Identical|Edit your watchlist}}",
+	"grant-editsiteconfig": "Name for grant \"editsiteconfig\".\n{{Related|Grant}}",
 	"grant-editpage": "Name for grant \"editpage\".\n{{Related|Grant}}",
 	"grant-editprotected": "Name for grant \"editprotected\".\n{{Related|Grant}}",
 	"grant-highvolume": "Name for grant \"highvolume\".\n{{Related|Grant}}",
